--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -4,5 +4,9 @@
 <p><strong>Description:</strong> <%= @job.description %></p>
 <p><strong>Location:</strong> <%= @job.location %></p>
 <p><strong>Status:</strong> <%= @job.status %></p>
+<% if current_user.admin? || current_user.staff? %>
+  <%= link_to "Edit", edit_job_path(@job) %>
+  <%= button_to "Delete", job_path(@job), method: :delete, data: { turbo_confirm: "Are you sure?" } %>
+<% end %>
 
 <%= link_to "Back to Jobs", jobs_path %>
